--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:17.1.0'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.6.1'
+    implementation 'com.google.firebase:firebase-messaging:17.3.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.6.+'
