--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,42 +14,64 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
-            android:name=".OwnerHome"
-            android:screenOrientation="portrait">
+            android:name=".homeOwner"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".userLogin"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".userRegChoose"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".userCreateAccount"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".homeTenant"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".AddProperty"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".addBasic"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".propertyImages"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".addPropAgreement"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity android:name=".displayProperty" />
+        <activity android:name=".displayPropertyTen" />
+        <activity android:name=".userSort">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Login"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".RegChooseUser"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".createAccount"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".TenantHome"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".AddProperty"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".basics"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".propertyImages"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name=".Agreement"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat" />
-        <activity android:name=".displayProperty"></activity>
+        <activity android:name=".userOwnerDetails" />
+
+        <service android:name=".MessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <meta-data
+            android:name="com.google.firebase..messaging.default_notification_channel_id"
+            android:value="@string/channel_id" />
+
+        <activity android:name=".userTenantDetails">
+            <intent-filter>
+                <action android:name="com.example.suhei.irent.TARGETNOTIFICATION"></action>
+                <category android:name = "android.intent.category.DEFAULT"></category>
+
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
